--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="">PORTOFILO</a>
+                                    <a href="">PORTFOLIO</a>
                                     <ul>
 
                                         <li> <a href="">Standard</a></li>
