--- a/shop-list.html
+++ b/shop-list.html
@@ -98,7 +98,7 @@
                                                 <li> <a href="">Gallery</a></li>
                                                 <li> <a href="">Masonry</a></li>
                                                 <li> <a href="">Portfolio Layouts</a>
-                                                    <i class="fas fa-angle-right"></i>
+                                                    <i style="position: absolute; margin-left: 120px" class="fas fa-angle-right"></i>
                                                     <ul>
                                                         <li><a href="">Two Columns</a></li>
                                                         <li><a href="">Three Columns</a></li>
@@ -108,7 +108,7 @@
                                                     </ul>
                                                 </li>
                                                 <li> <a href="">Portfolio Single</a>
-                                                    <i class="fas fa-angle-right"></i>
+                                                    <i style="position: absolute; margin-left: 120px" class="fas fa-angle-right"></i>
                                                     <ul>
                                                         <li><a href="">Small Images</a></li>
                                                         <li><a href="">Small Slider</a></li>
@@ -122,12 +122,12 @@
                                         </li>
                                         <li>
                                             <a href="">BLOG</a>
-                                            <ul>
+                                            <ul   style="width:170px">
                                                 <li> <a href="">Masonry</a></li>
                                                 <li> <a href="">Standards</a></li>
                                                 <li> <a href="">Post Types</a>
         
-                                                    <i class="fas fa-angle-right"></i>
+                                                    <i style="position: absolute; margin-left: 120px" class="fas fa-angle-right"></i>
                                                     <ul>
                                                         <li>Standard</li>
                                                         <li>Gallery</li>
@@ -142,9 +142,9 @@
                                         </li>
                                         <li>
                                             <a style="text-decoration:underline" href="">ELEMENTS</a>
-                                            <ul>
-                                                <li><a href="">Classic</a><i class="fas fa-angle-right"></i>
-                                                    <ul>
+                                            <ul   style="width:190px">
+                                                <li><a href="">Classic</a><i style="position: absolute; margin-left: 120px" class="fas fa-angle-right"></i>
+                                                    <ul >
                                                         <li><a href="">Accordions</a></li>
                                                         <li><a href="">Tabs</a></li>
                                                         <li><a href="">Buttons</a></li>
@@ -152,8 +152,8 @@
                                                         <li><a href="">Contac Forum</a></li>
                                                     </ul>
                                                 </li>
-                                                <li><a href="">Infographic</a><i class="fas fa-angle-right"></i>
-                                                    <ul>
+                                                <li><a href="">Infographic</a><i style="position: absolute; margin-left: 120px" class="fas fa-angle-right"></i>
+                                                    <ul  style="width:220px">
                                                         <li><a href="">Blog List</a></li>
                                                         <li><a href="">Connters</a></li>
                                                         <li><a href="">Count Down</a></li>
@@ -162,8 +162,8 @@
                                                         <li><a href="">Pie Carts</a></li>
                                                     </ul>
                                                 </li>
-                                                <li><a href="">Interactive</a><i class="fas fa-angle-right"></i>
-                                                    <ul>
+                                                <li><a href="">Interactive</a><i style="position: absolute; margin-left: 120px" class="fas fa-angle-right"></i>
+                                                    <ul  style="width:220px">
                                                         <li><a href="">Image Gallery</a></li>
                                                         <li><a href="">Testimonials</a></li>
                                                         <li><a href="">Team</a></li>
@@ -172,8 +172,8 @@
                                                         <li><a href="">Portfolio List</a></li>
                                                     </ul>
                                                 </li>
-                                                <li><a href="">Typography</a><i class="fas fa-angle-right"></i>
-                                                    <ul>
+                                                <li><a href="">Typography</a><i style="position: absolute; margin-left: 120px" class="fas fa-angle-right"></i>
+                                                    <ul  style="width:220px">
                                                         <li><a href="">Heading</a></li>
                                                         <li><a href="">Columns</a></li>
                                                         <li><a href="">Section Title</a></li>
@@ -375,7 +375,7 @@
     <div class=" footer">
         <div>
             <ul style="text-decoration:none;list-style-type:none">
-                <li class="foot">CUSTOMER SERVICE</li>
+                <li style="margin-top:40px" class="foot">CUSTOMER SERVICE</li>
                 <li class="foot" style="margin-top:13px">Help & Contact Us</li>
                 <li class="foot" style="margin-top:8px">Returns & Refunds</li>
                 <li class="foot" style="margin-top:8px">Online Stores</li>
@@ -385,7 +385,7 @@
 
         <div>
             <ul style="text-decoration:none;list-style-type:none">
-                <li class="foot">COMPANY</li>
+                <li style="margin-top:40px" class="foot">COMPANY</li>
                 <li class="foot" style="margin-top:13px">About Us</li>
                 <li class="foot" style="margin-top:8px">Blog</li>
                 <li class="foot" style="margin-top:8px">Order Tracking</li>
@@ -397,7 +397,7 @@
 
         <div>
             <ul style="text-decoration:none;list-style-type:none">
-                <li class="foot">SOCIAL MEDIA</li>
+                <li style="margin-top:40px" class="foot">SOCIAL MEDIA</li>
                 <li class="foot" style="margin-top:13px">Twitter</li>
                 <li class="foot" style="margin-top:8px">Instagram</li>
                 <li class="foot" style="margin-top:8px">Tumblr</li>
@@ -407,7 +407,7 @@
 
         <div>
             <ul style="text-decoration:none;list-style-type:none">
-                <li class="foot">ARCHIVE</li>
+                <li style="margin-top:40px" class="foot">ARCHIVE</li>
                 <li class="foot" style="margin-top:13px">Designer Shoes</li>
                 <li class="foot" style="margin-top:8px">Gallery</li>
                 <li class="foot" style="margin-top:8px">Pricing</li>
