--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                         <li> <a href="">Gallery</a></li>
                                         <li> <a href="">Masonry</a></li>
                                         <li> <a href="">Portfolio Layouts</a>
-                                            <i class="fas fa-angle-right"></i>
+                                            <i style="position: absolute; margin-left: 120px" class="fas fa-angle-right"></i>
                                             <ul>
                                                 <li><a href="">Two Columns</a></li>
                                                 <li><a href="">Three Columns</a></li>
@@ -114,7 +114,7 @@
                                             </ul>
                                         </li>
                                         <li> <a href="">Portfolio Single</a>
-                                            <i class="fas fa-angle-right"></i>
+                                            <i style="position: absolute; margin-left: 120px" class="fas fa-angle-right"></i>
                                             <ul>
                                                 <li><a href="">Small Images</a></li>
                                                 <li><a href="">Small Slider</a></li>
@@ -128,12 +128,12 @@
                                 </li>
                                 <li>
                                     <a href="">BLOG</a>
-                                    <ul>
+                                    <ul style="width:180px" >
                                         <li> <a href="">Masonry</a></li>
                                         <li> <a href="">Standards</a></li>
                                         <li> <a href="">Post Types</a>
 
-                                            <i class="fas fa-angle-right"></i>
+                                            <i style="position: absolute; margin-left: 120px" class="fas fa-angle-right"></i>
                                             <ul>
                                                 <li>Standard</li>
                                                 <li>Gallery</li>
@@ -149,7 +149,7 @@
                                 <li>
                                     <a href="">ELEMENTS</a>
                                     <ul>
-                                        <li><a href="">Classic</a><i class="fas fa-angle-right"></i>
+                                        <li><a href="">Classic</a><i style="position: absolute; margin-left: 120px" class="fas fa-angle-right"></i>
                                             <ul>
                                                 <li><a href="">Accordions</a></li>
                                                 <li><a href="">Tabs</a></li>
@@ -158,7 +158,7 @@
                                                 <li><a href="">Contac Forum</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="">Infographic</a><i class="fas fa-angle-right"></i>
+                                        <li><a href="">Infographic</a><i style="position: absolute; margin-left: 120px" class="fas fa-angle-right"></i>
                                             <ul>
                                                 <li><a href="">Blog List</a></li>
                                                 <li><a href="">Connters</a></li>
@@ -168,7 +168,7 @@
                                                 <li><a href="">Pie Carts</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="">Interactive</a><i class="fas fa-angle-right"></i>
+                                        <li><a href="">Interactive</a><i style="position: absolute; margin-left: 120px" class="fas fa-angle-right"></i>
                                             <ul>
                                                 <li><a href="">Image Gallery</a></li>
                                                 <li><a href="">Testimonials</a></li>
@@ -178,7 +178,7 @@
                                                 <li><a href="">Portfolio List</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="">Typography</a><i class="fas fa-angle-right"></i>
+                                        <li><a href="">Typography</a><i style="position: absolute; margin-left: 120px" class="fas fa-angle-right"></i>
                                             <ul>
                                                 <li><a href="">Heading</a></li>
                                                 <li><a href="">Columns</a></li>
@@ -538,7 +538,7 @@
             <div class=" footer">
                 <div>
                     <ul style="text-decoration:none;list-style-type:none">
-                        <li class="foot">CUSTOMER SERVICE</li>
+                        <li style="margin-top:40px" class="foot">CUSTOMER SERVICE</li>
                         <li class="foot" style="margin-top:13px">Help & Contact Us</li>
                         <li class="foot" style="margin-top:8px">Returns & Refunds</li>
                         <li class="foot" style="margin-top:8px">Online Stores</li>
@@ -548,7 +548,7 @@
 
                 <div>
                     <ul style="text-decoration:none;list-style-type:none">
-                        <li class="foot">COMPANY</li>
+                        <li style="margin-top:40px" class="foot">COMPANY</li>
                         <li class="foot" style="margin-top:13px">About Us</li>
                         <li class="foot" style="margin-top:8px">Blog</li>
                         <li class="foot" style="margin-top:8px">Order Tracking</li>
@@ -560,7 +560,7 @@
 
                 <div>
                     <ul style="text-decoration:none;list-style-type:none">
-                        <li class="foot">SOCIAL MEDIA</li>
+                        <li style="margin-top:40px" class="foot">SOCIAL MEDIA</li>
                         <li class="foot" style="margin-top:13px">Twitter</li>
                         <li class="foot" style="margin-top:8px">Instagram</li>
                         <li class="foot" style="margin-top:8px">Tumblr</li>
@@ -570,7 +570,7 @@
 
                 <div>
                     <ul style="text-decoration:none;list-style-type:none">
-                        <li class="foot">ARCHIVE</li>
+                        <li style="margin-top:40px" class="foot">ARCHIVE</li>
                         <li class="foot" style="margin-top:13px">Designer Shoes</li>
                         <li class="foot" style="margin-top:8px">Gallery</li>
                         <li class="foot" style="margin-top:8px">Pricing</li>
